plugins {
    id 'application'
    id 'eclipse'
}

repositories {
    mavenCentral()
}

configurations {
    // configuration that holds jars to include in the jar
    extraLibs
}

dependencies {
    extraLibs 'org.apache.commons:commons-math3:3.6.1'
    testImplementation 'org.testng:testng:7.7.1'
    configurations.implementation.extendsFrom(configurations.extraLibs)
}

application {
    mainClass = 'exercisegenerator.Main'
}

java {
    sourceCompatibility = "1.21"
    targetCompatibility = "1.21"
}

jar {
    manifest {
        attributes 'Main-Class': 'exercisegenerator.Main'
    }
    archiveBaseName = 'exercisegenerator'
    from { configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) } }
}

tasks.named('test') {
    useTestNG()
}
